[gd_scene load_steps=10 format=3 uid="uid://c73d4hrhtun0x"]

[ext_resource type="Texture2D" uid="uid://dgtgxo3jo7r45" path="res://assets/sprites/balls/flag.png" id="1"]
[ext_resource type="FontFile" uid="uid://cr1ufi8wpbpqp" path="res://assets/fonts/04b_19.ttf" id="2"]
[ext_resource type="PackedScene" path="res://combat/traits/Owned.tscn" id="3"]
[ext_resource type="Script" uid="uid://cwh1oporm3y52" path="res://actors/environments/FlagPole.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://db4agkeb2pbw6" path="res://assets/sprites/environments/base.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b77l6r0erxggg" path="res://assets/sprites/environments/base_lines.png" id="6"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flags:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Circuit/Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="3"]
resource_name = "Scoring"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314), Color(2, 2, 2, 1), Color(1, 1, 1, 0.784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flags:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.5, 1.5, 1.5, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Circuit/Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(4, 4, 4, 1), Color(1, 1, 1, 1)]
}

[node name="FlagPole" type="Area2D" groups=["FlagPole"]]
position = Vector2(-800, -800)
collision_layer = 0
collision_mask = 513
script = ExtResource("4")

[node name="Owned" parent="." instance=ExtResource("3")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-350, 0, 0, -350, 350, 0, 0, 350)

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.784314)
position = Vector2(0, 32)
scale = Vector2(2, 2)
texture = ExtResource("5")

[node name="PlayerLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 150.0
theme_override_fonts/font = SubResource("1")
text = "PPP"
align = 1
valign = 1

[node name="Flags" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Flag" type="Sprite2D" parent="Flags"]
visible = false
position = Vector2(65, -307)
texture = ExtResource("1")

[node name="Flag2" type="Sprite2D" parent="Flags"]
visible = false
position = Vector2(225, -143)
texture = ExtResource("1")

[node name="Flag3" type="Sprite2D" parent="Flags"]
visible = false
position = Vector2(-95, -143)
texture = ExtResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource("2")
anims/Scoring = SubResource("3")

[node name="Circuit" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 32)

[node name="Sprite2D" type="Sprite2D" parent="Circuit"]
position = Vector2(50, 50)
scale = Vector2(2, 2)
texture = ExtResource("6")
centered = false

[connection signal="body_entered" from="." to="." method="_on_FlagPole_body_entered"]
